Bug 547119 - Imported Japanese Email from Outlook shows as garbled text; r=neil sr=neil